# gc-gmics

./: CITATION.cff  README.md  common_functions.py  fig_01_plot_key_galaxy_properties.py  fig_02_key_galaxy_properties.py  fig_02_plot_gas_bh_properties.py  fig_02_plot_z0_mass_function.py  fig_03_gas_bh_properties.py  fig_03_plot_rates_of_change.py  fig_03_plot_z0_mass_function.py  fig_04_05_plot_gc_properties.py  fig_04_z0_mass_function.py  fig_05_rates_of_change.py  fig_06_07_gc_properties.py  fig_06_plot_gas_bh_properties.py  fig_07_plot_fhalo.py  fig_08_fhalo.py  fig_dmGCdt_per_MSFgas.py  paper.mplstyle  print_paper_results.py  process_data.py  pyproject.toml  requirements.txt  run_all_scripts.py  settings.py  settings.yaml  setup.py  universal_settings.py
.github/: dependabot.yml
.github/workflows/: dependabot-reviewer.yml  test_repo.yml
data/: bastian2020_SM_Mstar_z0.csv  bastian2020_SMinit_Mstar_z0.csv  baumgardt_2019_mw_gcs.csv  caldwell_2009_intermediate_clusters.csv  caldwell_2009_old_clusters.csv  caldwell_2009_young_clusters.csv  caldwell_2011_logMstar_FeH.csv  enhanced_mgc_100000_data.hdf5  enhanced_noBH_mgc_100000_data.hdf5  fall_2009_NdlogM_M.csv  horta_2021_fGC.csv  hunt_2024_N_M_bins.csv  johnson_2017_dNdlogM_M.csv  organic_z0_gc_properties.hdf5  z2_od_1p000_HiRes_gcmass_100000_paper_data.hdf5  z2_od_1p000_HiRes_noBH_gcmass_100000_paper_data.hdf5  z2_od_1p000_HiRes_paper_z0_gc_properties.hdf5  z2_od_1p000_mz1p7_0p800_HiRes_gcmass_100000_paper_data.hdf5  z2_od_1p000_mz1p7_0p800_HiRes_noBH_gcmass_100000_paper_data.hdf5  z2_od_1p000_mz1p7_0p800_HiRes_paper_z0_gc_properties.hdf5  z2_od_1p000_mz1p7_1p100_HiRes_gcmass_100000_paper_data.hdf5  z2_od_1p000_mz1p7_1p100_HiRes_paper_z0_gc_properties.hdf5
gcgmics/: __init__.py  common_functions.py  process_data.py  settings.py
tests/: test_common_functions.py  test_process_data.py  test_settings.py
