[build-system]
    build-backend="setuptools.build_meta"
    requires     =["setuptools>=61.0.0", "wheel"]

[project]
    authors=[{name="Oliver Newton", email="onewton@cft.edu.pl"}]
    classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Astronomy",
        "Topic :: Scientific/Engineering",
    ]
    dependencies=[
        "PyYAML",
        "h5py",
        "matplotlib",
        "mplcairo",
        "numpy",
        "scipy",
    ]
    description="Reduced data and scripts to reproduce the figures in the GM-GC paper."
    dynamic=["version"]
    keywords=["astronomy", "globular cluster"]
    license={file="LICENSE.txt"}
    maintainers=[{name="Oliver Newton", email="onewton@cft.edu.pl"}]
    name="gcgmics"
    readme="README.md"
    requires-python=">=3.8"

[project.urls]
    "Bug Tracker"="https://github.com/Musical-Neutron/gc-gmics/issues"
    Changelog    ="https://github.com/Musical-Neutron/gc-gmics/blob/main/CHANGELOG.md"
    Repository   ="https://github.com/Musical-Neutron/gc-gmics"

[project.optional-dependencies]
    dev=["black", "flake8", "ipython"]
    # docs=["numpydoc", "sphinx", "sphinx-rtd-theme"]
    test=[
        "nose",        # Keep if you still need it for legacy tests
        "pytest-cov",
        "pytest>=6.0",
    ]

[tool.setuptools.dynamic]
    version={file=["VERSION"]}

[tool.setuptools.packages.find]
    exclude=["build", "docs", "scripts", "tests", "tutorials"]
    where  =["."]

[tool.setuptools]
    include-package-data=true

[tool.setuptools.package-data]
    gcgmics=["*.json", "*.md", "*.txt", "settings.yaml"]

[tool.pytest.ini_options]
    addopts     ="-v -ra -q --cov=gcgmics --cov-report=xml:cov.xml"
    python_files="test_*.py"
    testpaths   =["tests"]
